--- a/deploy/index.html
+++ b/deploy/index.html
@@ -1606,37 +1606,36 @@
                         </g>
                         <g id="title" fill="#ED1C24">
                           <g id="the">
-                            <path id="thet" d="M481.15 385.037v-19.63H474v-7h22.35v7h-7.12v19.63h-8.08Z"/>
-                            <path id="theh" d="M516.87 385.037v-10.19h-9.56v10.19h-8.08v-26.67h8.08v9.44h9.56v-9.44h8.08v26.67h-8.08Z"/>
-                            <path id="thee" d="M529.27 385.037v-26.67h20.24v6.74h-12.16v3.12h11.88v6.72h-11.88v3.4h12.16v6.71l-20.24-.02Z"/>
+                            <path id="thet" d="M476.15 396.67v-19.63H469v-7h22.35v7h-7.12v19.63h-8.08Z"/>
+                            <path id="theh" d="M511.87 396.67v-10.19h-9.56v10.19h-8.08V370h8.08v9.44h9.56V370h8.08v26.67h-8.08Z"/>
+                            <path id="thee" d="M524.27 396.67V370h20.24v6.74h-12.16v3.12h11.88v6.72h-11.88v3.4h12.16v6.71l-20.24-.02Z"/>
                           </g>
                           <g id="huntress">
-                            <path id="hunth" d="M423.63 385.037v-10.19h-9.56v10.19H406v-26.67h8.07v9.44h9.56v-9.44h8.08v26.67h-8.08Z"/>
-                            <path id="huntu" d="M436.03 358.367h8.2v15.44c0 2.56 1.32 4.6 4.64 4.6 3.32 0 4.6-2 4.6-4.6v-15.44h8.2v15.68c0 6.63-3.8 11.47-12.8 11.47s-12.84-4.84-12.84-11.43v-15.72Z"/>
-                            <path id="huntn" d="m483.91 385.037-9.84-14.31v14.31h-8.08v-26.67h8.32l9.28 13.44v-13.44h8.08v26.67h-7.76Z"/>
-                            <path id="huntt" d="M501.71 385.037v-19.63h-7.16v-7h22.36v7h-7.12v19.63h-8.08Z"/>
-                            <path id="huntr" d="m534.46 385.037-3.68-8.55h-2.92v8.55h-8.08v-26.67h14.24c6.24 0 9.6 4.16 9.6 9.16.07 1.667-.346 3.319-1.199 4.753a8.59627 8.59627 0 0 1-3.601 3.327l4.84 9.43h-9.2Zm-1.67-19.93h-4.92v4.68h4.92c.333.043.671.015.993-.082.321-.098.618-.263.87-.484.253-.222.455-.495.593-.801.139-.305.211-.637.211-.973 0-.336-.072-.668-.211-.974-.138-.306-.34-.579-.593-.8-.252-.222-.549-.387-.87-.484-.322-.098-.66-.126-.993-.082Z"/>
-                            <path id="hunte" d="M546.91 385.037v-26.67h20.24v6.74h-12.16v3.12h11.88v6.72h-11.88v3.4h12.16v6.71l-20.24-.02Z"/>
-                            <path id="hunts" d="M572.91 375.287c2.316 2.212 5.397 3.444 8.6 3.44 1.52 0 3-.52 3-1.56s-1.12-1.56-3.76-2c-4.4-.8-11.12-1.84-11.12-8.52 0-4.52 3.76-8.64 11.08-8.64 4.091-.114 8.094 1.201 11.32 3.72l-4.32 5.72c-2.155-1.614-4.75-2.535-7.44-2.64-2 0-2.44.72-2.44 1.4 0 1 1.08 1.4 3.92 1.88 4.4.76 10.92 2 10.92 8.2 0 5.87-4.36 9.27-11.52 9.27-5.68 0-9.56-1.68-12.4-4.24l4.16-6.03Z"/>
-                            <path id="huntss" d="M597.46 375.287c2.316 2.212 5.397 3.444 8.6 3.44 1.52 0 3-.52 3-1.56s-1.12-1.56-3.76-2c-4.4-.8-11.12-1.84-11.12-8.52 0-4.52 3.76-8.64 11.08-8.64 4.091-.114 8.094 1.201 11.32 3.72l-4.32 5.72c-2.155-1.614-4.75-2.535-7.44-2.64-2 0-2.44.72-2.44 1.4 0 1 1.08 1.4 3.92 1.88 4.4.76 10.92 2 10.92 8.2 0 5.87-4.36 9.27-11.52 9.27-5.68 0-9.56-1.68-12.4-4.24l4.16-6.03Z"/>
+                            <path id="hunth" d="M423.63 397.037v-10.19h-9.56v10.19H406v-26.67h8.07v9.44h9.56v-9.44h8.08v26.67h-8.08Z"/>
+                            <path id="huntu" d="M436.03 370.367h8.2v15.44c0 2.56 1.32 4.6 4.64 4.6 3.32 0 4.6-2 4.6-4.6v-15.44h8.2v15.68c0 6.63-3.8 11.47-12.8 11.47s-12.84-4.84-12.84-11.43v-15.72Z"/>
+                            <path id="huntn" d="m483.91 397.037-9.84-14.31v14.31h-8.08v-26.67h8.32l9.28 13.44v-13.44h8.08v26.67h-7.76Z"/>
+                            <path id="huntt" d="M501.71 397.037v-19.63h-7.16v-7h22.36v7h-7.12v19.63h-8.08Z"/>
+                            <path id="huntr" d="m534.46 397.037-3.68-8.55h-2.92v8.55h-8.08v-26.67h14.24c6.24 0 9.6 4.16 9.6 9.16.07 1.667-.346 3.319-1.199 4.753a8.59627 8.59627 0 0 1-3.601 3.327l4.84 9.43h-9.2Zm-1.67-19.93h-4.92v4.68h4.92c.333.043.671.015.993-.082.321-.098.618-.263.87-.484.253-.222.455-.495.593-.801.139-.305.211-.637.211-.973 0-.336-.072-.668-.211-.974-.138-.306-.34-.579-.593-.8-.252-.222-.549-.387-.87-.484-.322-.098-.66-.126-.993-.082Z"/>
+                            <path id="hunte" d="M546.91 397.037v-26.67h20.24v6.74h-12.16v3.12h11.88v6.72h-11.88v3.4h12.16v6.71l-20.24-.02Z"/>
+                            <path id="hunts" d="M572.91 387.287c2.316 2.212 5.397 3.444 8.6 3.44 1.52 0 3-.52 3-1.56s-1.12-1.56-3.76-2c-4.4-.8-11.12-1.84-11.12-8.52 0-4.52 3.76-8.64 11.08-8.64 4.091-.114 8.094 1.201 11.32 3.72l-4.32 5.72c-2.155-1.614-4.75-2.535-7.44-2.64-2 0-2.44.72-2.44 1.4 0 1 1.08 1.4 3.92 1.88 4.4.76 10.92 2 10.92 8.2 0 5.87-4.36 9.27-11.52 9.27-5.68 0-9.56-1.68-12.4-4.24l4.16-6.03Z"/>
+                            <path id="huntss" d="M597.46 387.287c2.316 2.212 5.397 3.444 8.6 3.44 1.52 0 3-.52 3-1.56s-1.12-1.56-3.76-2c-4.4-.8-11.12-1.84-11.12-8.52 0-4.52 3.76-8.64 11.08-8.64 4.091-.114 8.094 1.201 11.32 3.72l-4.32 5.72c-2.155-1.614-4.75-2.535-7.44-2.64-2 0-2.44.72-2.44 1.4 0 1 1.08 1.4 3.92 1.88 4.4.76 10.92 2 10.92 8.2 0 5.87-4.36 9.27-11.52 9.27-5.68 0-9.56-1.68-12.4-4.24l4.16-6.03Z"/>
                           </g>
                           <g id="sofia">
-                            <path id="sofias" d="M482.24 405.107c1.213 1.163 2.829 1.811 4.51 1.81.8 0 1.55-.28 1.55-.82 0-.54-.58-.82-2-1.07-2.31-.42-5.84-1-5.84-4.48 0-2.37 2-4.53 5.82-4.53 2.147-.061 4.247.629 5.94 1.95l-2.27 3c-1.131-.843-2.491-1.324-3.9-1.38-1.05 0-1.28.38-1.28.73 0 .55.56.74 2.06 1 2.31.4 5.73 1.07 5.73 4.3 0 3.23-2.29 4.88-6.05 4.88-2.376.121-4.708-.677-6.51-2.23l2.24-3.16Z"/>
-                            <path id="sofiao" d="M500.88 396.007c4.33 0 7.67 2.94 7.67 7.24 0 4.3-3.34 7.25-7.67 7.25s-7.66-2.94-7.66-7.25c0-4.31 3.34-7.24 7.66-7.24Zm0 3.74c-.7-.03-1.393.15-1.99.518-.597.367-1.07.905-1.359 1.544-.288.638-.379 1.349-.26 2.04.119.69.442 1.33.927 1.835.485.506 1.111.855 1.796 1.002.686.147 1.399.085 2.049-.177.65-.263 1.207-.713 1.598-1.295.392-.581.6-1.266.599-1.967.026-.455-.042-.91-.199-1.337-.158-.427-.402-.817-.718-1.146a3.3138 3.3138 0 0 0-1.115-.763c-.421-.175-.873-.262-1.328-.254Z"/>
-                            <path id="sofiaf" d="M510.06 410.237v-14h10.63v3.53h-6.39v1.63h6.24v3.53h-6.24v5.31h-4.24Z"/>
-                            <path id="sofiai" d="M522.49 410.237v-14h4.25v14h-4.25Z"/>
-                            <path id="sofiaa" d="m538.56 410.237-.55-1.8h-5.37l-.55 1.8h-4.6l5.17-14h5.33l5.17 14h-4.6Zm-3.24-10.26-1.59 4.93h3.19l-1.6-4.93Z"/>
+                            <path id="sofias" d="M435.24 391.1c1.213 1.163 2.829 1.811 4.51 1.81.8 0 1.55-.28 1.55-.82 0-.54-.58-.82-2-1.07-2.31-.42-5.84-1-5.84-4.48 0-2.37 2-4.53 5.82-4.53 2.147-.061 4.247.629 5.94 1.95l-2.27 3c-1.131-.842-2.491-1.323-3.9-1.38-1.05 0-1.28.38-1.28.73 0 .55.56.74 2.06 1 2.31.4 5.73 1.07 5.73 4.3 0 3.23-2.29 4.88-6.05 4.88-2.376.122-4.708-.677-6.51-2.23l2.24-3.16Z"/>
+                            <path id="sofiao" d="M453.88 382c4.33 0 7.67 2.94 7.67 7.24 0 4.3-3.34 7.25-7.67 7.25s-7.66-2.94-7.66-7.25c0-4.31 3.34-7.24 7.66-7.24Zm0 3.74c-.7-.03-1.393.15-1.99.518-.597.367-1.07.905-1.359 1.544-.288.639-.379 1.349-.26 2.04.119.691.442 1.33.927 1.836.485.505 1.111.854 1.796 1.001.686.147 1.399.085 2.049-.177.65-.262 1.207-.713 1.598-1.295.392-.581.6-1.266.599-1.967.026-.455-.042-.91-.199-1.337-.158-.427-.402-.817-.718-1.146a3.3138 3.3138 0 0 0-1.115-.763c-.421-.175-.873-.262-1.328-.254Z"/>
+                            <path id="sofiaf" d="M463.06 396.23v-14h10.63v3.53h-6.39v1.63h6.24v3.53h-6.24v5.31h-4.24Z"/>
+                            <path id="sofiai" d="M475.49 396.23v-14h4.25v14h-4.25Z"/>
+                            <path id="sofiaa" d="m491.56 396.23-.55-1.8h-5.37l-.55 1.8h-4.6l5.17-14h5.33l5.17 14h-4.6Zm-3.24-10.26-1.59 4.93h3.19l-1.6-4.93Z"/>
                           </g>
                           <g id="samatar">
-                            <path id="sams" d="M463.19 405.107c1.217 1.163 2.836 1.812 4.52 1.81.79 0 1.55-.28 1.55-.82 0-.54-.59-.82-2-1.07-2.31-.42-5.84-1-5.84-4.48 0-2.37 2-4.53 5.82-4.53 2.146-.058 4.246.632 5.94 1.95l-2.27 3a6.98976 6.98976 0 0 0-3.91-1.38c-1 0-1.28.38-1.28.73 0 .55.57.74 2.06 1 2.31.4 5.73 1.07 5.73 4.3 0 3.23-2.29 4.88-6 4.88-2.376.121-4.708-.677-6.51-2.23l2.19-3.16Z"/>
-                            <path id="sama" d="m484.48 410.237-.55-1.8h-5.38l-.54 1.8h-4.6l5.16-14h5.34l5.16 14h-4.59Zm-3.24-10.26-1.59 4.93h3.19l-1.6-4.93Z"/>
-                            <path id="samm" d="M502.19 410.237v-8.84l-3.13 8.84h-1.87l-3.13-8.84v8.84h-4.24v-14h5.86l2.46 7.14 2.45-7.14h5.86v14h-4.26Z"/>
-                            <path id="samaa" d="m518.28 410.237-.54-1.8h-5.38l-.54 1.8h-4.63l5.17-14h5.33l5.16 14h-4.57Zm-3.23-10.26-1.59 4.93h3.19l-1.6-4.93Z"/>
-                            <path id="samt" d="M525.38 410.237v-10.31h-3.75v-3.69h11.73v3.69h-3.73v10.31h-4.25Z"/>
-                            <path id="samaaa" d="m543.19 410.237-.55-1.8h-5.37l-.55 1.8h-4.6l5.17-14h5.33l5.17 14h-4.6Zm-3.23-10.26-1.6 4.93h3.19l-1.59-4.93Z"/>
-                            <path id="samr" d="m556.19 410.237-1.93-4.49h-1.53v4.49h-4.24v-14h7.47c.653-.05 1.309.039 1.926.26.616.222 1.179.571 1.651 1.025.472.454.843 1.003 1.088 1.611.245.607.359 1.259.335 1.914.035.874-.185 1.74-.632 2.493-.448.752-1.103 1.359-1.888 1.747l2.54 4.95h-4.79Zm-.88-10.47h-2.58v2.45h2.58c.17.015.342-.005.504-.06.162-.054.31-.142.436-.257.127-.115.227-.256.296-.412.069-.156.105-.325.105-.496 0-.171-.036-.34-.105-.496-.069-.157-.169-.297-.296-.412-.126-.116-.274-.203-.436-.258-.162-.054-.334-.075-.504-.059Z"/>
+                            <path id="sams" d="M506.19 391.107c1.217 1.163 2.836 1.812 4.52 1.81.79 0 1.55-.28 1.55-.82 0-.54-.59-.82-2-1.07-2.31-.42-5.84-1-5.84-4.48 0-2.37 2-4.53 5.82-4.53 2.146-.058 4.246.632 5.94 1.95l-2.27 3a6.98976 6.98976 0 0 0-3.91-1.38c-1 0-1.28.38-1.28.73 0 .55.57.74 2.06 1 2.31.4 5.73 1.07 5.73 4.3 0 3.23-2.29 4.88-6 4.88-2.376.121-4.708-.677-6.51-2.23l2.19-3.16Z"/>
+                            <path id="sama" d="m527.48 396.237-.55-1.8h-5.38l-.54 1.8h-4.6l5.16-14h5.34l5.16 14h-4.59Zm-3.24-10.26-1.59 4.93h3.19l-1.6-4.93Z"/>
+                            <path id="samm" d="M545.19 396.237v-8.84l-3.13 8.84h-1.87l-3.13-8.84v8.84h-4.24v-14h5.86l2.46 7.14 2.45-7.14h5.86v14h-4.26Z"/>
+                            <path id="samaa" d="m561.28 396.237-.54-1.8h-5.38l-.54 1.8h-4.63l5.17-14h5.33l5.16 14h-4.57Zm-3.23-10.26-1.59 4.93h3.19l-1.6-4.93Z"/>
+                            <path id="samt" d="M568.38 396.237v-10.31h-3.75v-3.69h11.73v3.69h-3.73v10.31h-4.25Z"/>
+                            <path id="samaaa" d="m586.19 396.237-.55-1.8h-5.37l-.55 1.8h-4.6l5.17-14h5.33l5.17 14h-4.6Zm-3.23-10.26-1.6 4.93h3.19l-1.59-4.93Z"/>
+                            <path id="samr" d="m599.19 396.237-1.93-4.49h-1.53v4.49h-4.24v-14h7.47c.653-.05 1.309.039 1.926.26.616.222 1.179.571 1.651 1.025.472.454.843 1.003 1.088 1.611.245.607.359 1.259.335 1.914.035.874-.185 1.74-.632 2.493-.448.752-1.103 1.359-1.888 1.747l2.54 4.95h-4.79Zm-.88-10.47h-2.58v2.45h2.58c.17.015.342-.005.504-.06.162-.054.31-.142.436-.257.127-.115.227-.256.296-.412.069-.156.105-.325.105-.496 0-.171-.036-.34-.105-.496-.069-.157-.169-.297-.296-.412-.126-.116-.274-.203-.436-.258-.162-.054-.334-.075-.504-.059Z"/>
                           </g>
-                        </g>
                       </g>
                     </g>
                     <defs>
